--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Eliana's Playground</title>
 </head>
 <body>
-<h1>Eliana's Playground</h1>
+<h1 style="color:purple;">Eliana's Playground</h1>
 </body>
 </html>
