--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Eliana's Playground</title>
+<title>A PERSON THRUST INTO THE DARK LABYRINTH</title>
 </head>
 <body>
 <h1 style="color:purple;">Eliana's Playground</h1>
