--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>A PERSON THRUST INTO THE DARK LABYRINTH</title>
 </head>
 <body>
-<h1 style="color:purple;">Eliana's Playground</h1>
+<h1 style="color:purple;">A PERSON THRUST INTO THE DARK LABYRINTH</h1>
 </body>
 </html>
